# django-maldives-islands

./: LICENSE  README.md  check.py  pyproject.toml
.github/workflows/: django.yml
djangoapp/: pyproject.toml  requirements.txt
djangoapp/islandapp/: tests.py
djangoapp/mysite/: settings.py
src/islandsmv/: apps.py  models.py  signals.py  tests.py
src/islandsmv/fixtures/: island.json  islands.json  islands.yaml
src/islandsmv/migrations/: 0001_initial.py  0002_dhivehi_fields.py  0003_rename_atoll_fields.py  0004_alter_atoll_name.py
