[project]
name = "islands-mv"
version = "0.1.0"
description = "Reusable Django app that includes Maldives Atolls and Islands"
readme = "README.md"
authors = [
    { name = "Fauzaan Gasim", email = "hello@fauzaanu.com" }
]
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/islandsmv"]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
